--- a/themes/LPS-29874-theme/build.xml
+++ b/themes/LPS-29874-theme/build.xml
@@ -7,7 +7,7 @@
     <!--
     <property name="theme.type" value="ftl"></property>
     -->
-    <property name="theme.type" value="vm"></property>
+    <property name="theme.type" value="ftl"></property>
 
     <property name="theme.parent" value="_styled" />
 
